src/styles/display.css
.display-wrapper {
	box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
	margin-top: 3em;
	width: 100%;
	max-width: 750px;
}

.display-header {
	background-color: rgb(64, 83, 76);
	padding: 3em;
	text-align: center;
	position: relative;
}

.display-header img {
	position: absolute;
	width: 150px;
	height: auto;
	bottom: -5em;
	border-radius: 10px;
	box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.5);
}

.display-header h2 {
	color: rgb(242, 243, 244);
	font-size: 2.5rem;
	text-transform: uppercase;
}

.display-header p {
	color: rgb(242, 243, 244);
	font-weight: 600;
}

.main-info {
	display: flex;
	background-color: rgb(242, 243, 244);
	min-height: 800px;
}

.separator {
	width: 100%;
	background-color: rgb(64, 83, 76);
	height: 1px;
	margin-bottom: 0.5em;
}

.left-info {
	padding: 8em 3em;
	background-color: rgba(103, 125, 106, 0.5);
	width: 50%;
	max-width: 300px;
}

.left-info .profile-info {
	margin-bottom: 8em;
}

.profile-info h3,
.contact-info h3 {
	text-transform: uppercase;
	font-size: 1.2rem;
}

.profile-info p,
.contact-info p {
	font-size: 0.9rem;
}

.right-info {
	padding: 5em 3em;
	width: 100%;
	display: flex;
	flex-direction: column;
	gap: 3em;
}

.education-info h3,
.experience-info h3,
.skills-info h3 {
	text-transform: uppercase;
	font-size: 1.2rem;
	margin-bottom: 0.5em;
}

.school-info,
.company-info {
	display: flex;
	align-items: center;
	gap: 0.5em;
}

.education-info .title,
.experience-info .title {
	font-size: 0.9rem;
	font-weight: 500;
}

.education-info small,
.experience-info small {
	font-size: 0.8rem;
}

.education-info .description,
.experience-info .description {
	font-size: 0.8rem;
}

.skills-info ul {
	list-style: none;
	font-size: 0.9rem;
}

@media (max-width: 599px) {
	.display-header img {
		width: 100px;
		bottom: -50px;
		left: 50%;
		transform: translateX(-50%);
	}
}

